fixed header not displaying correctly on small screen

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -6,7 +6,7 @@ $body-bg: $background-color;
 
 .jumbotron {
   background-color: #86b3da;
-  height: 60px;
+  min-height: 60px;
   padding: 1em 1em;
 }
 
